# shortly

./: README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: postCreate.sh
.github/workflows/: ci.yml  publish-python-dist.yml
src/shortly/: database.py  health.py  logging.py  main.py  models.py  routes.py  shorten.py  utils.py
tests/: test_health.py  test_logging.py  test_main.py  test_routes.py  test_shorten.py
